force-app/main/default/objects/Site_Authorization_User__c/Site_Authorization_User__c.object-meta.xml
<CustomObject>
    <label>Site Authorization User</label>
    <nameField>
        <displayFormat>SAU-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Authorization User</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>