force-app/main/default/objects/Site_Authorization_User__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Research Coordinator</fullName>
            </value>
            <value>
                <fullName>Principal Investigator</fullName>
            </value>
            <value>
                <fullName>Cell Therapy Lab</fullName>
            </value>
            <value>
                <fullName>Apheresis Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>