force-app/main/default/objects/Site_Authorization_User__c/fields/Study_Definition__c.field-meta.xml
<CustomField>
    <fullName>Study_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Definition</label>
    <referenceTo>Study_Protocol__c</referenceTo>
    <relationshipLabel>Site Authorization User</relationshipLabel>
    <relationshipName>Site_Authorization_User</relationshipName>
    <type>Lookup</type>
</CustomField>